Forces image aspect ratio (to prevent layout shifts) and lazy loads thumbs

--- a/assets/css/imports/work.css
+++ b/assets/css/imports/work.css
@@ -31,6 +31,8 @@
 #work img {
   margin-bottom: calc(var(--gutter) * .5);
   width: 100%;
+  aspect-ratio: 1;
+  background-color: var(--color-paper);
 }
 
 #work time {
